--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>{% block page_title %}{% endblock %}</title>
 {#    <link href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">#}
-    <link href="/static/css/common.css" type="text/css" rel="stylesheet">
-    <link href="/static/css/mycss.css" type="text/css" rel="stylesheet">
+    <link href="/movies/static/css/common.css" type="text/css" rel="stylesheet">
+    <link href="/movies/static/css/mycss.css" type="text/css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js" type="text/javascript"></script>
     {% block page_css %}
         
